[workspace]
members = ["crates/ifaddr6"]

[package]
name = "alcyone"
version = "0.1.0"
edition = "2021"
description = "强大的动态 DNS 客户端 - 支持多域名多服务商 (Rust 版本)"
authors = ["Alcyone Team"]
license = "MIT"

[dependencies]
ifaddr6 = { path = "crates/ifaddr6" }
# JSON 处理
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP 客户端
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# futures
futures = "0.3"

# libc (BSD)
libc = "0.2"

# 命令行参数解析
clap = { version = "4.4", features = ["derive"] }

# 日志
log = "0.4"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 时间
chrono = "0.4"

# HMAC-SHA1 签名 (用于阿里云)
hmac = "0.12"
sha1 = "0.10"
base64 = "0.21"

# URL 编码
percent-encoding = "2.3"

# 异步 trait
async-trait = "0.1"

# netlink (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.14"
netlink-packet-route = "0.19"
netlink-packet-core = "0.7"
netlink-sys = "0.8"

[profile.release]
opt-level = 3
lto = true
